vbnc/vbnc/tests/Errors/30387.vb
Class E
	Sub New (i As Integer)
	End Sub
End Class

Class C
    Inherits E

    Shared Sub Main()

    End Sub
End Class